--- a/css/style1.css
+++ b/css/style1.css
@@ -152,7 +152,7 @@ section {
 	position:absolute;
 	top:0;
 	left:0;
-	background-image:url(http://unsplash.it/1600/1400?random=2);
+	background-image:url(http://i.imgur.com/oMKfJiP.png);
 	-webkit-background-size:cover !Important;
 	-moz-background-size:cover !Important;
 	-o-background-size:cover !Important;
@@ -624,7 +624,7 @@ input,button,select,textarea {
 	position:absolute;
 	top:0;
 	left:0;
-	background:url(http://www.wowthemes.net/demo/quasar/assets/img/slide_1.jpg) fixed no-repeat;
+	background:url(http://www.citizentekk.com/wp-content/uploads/2016/11/NRZ6l1.jpg) fixed no-repeat;
 	width:100%;
 	height:100%;
 	opacity:0.1;
@@ -650,7 +650,7 @@ input,button,select,textarea {
 	position:absolute;
 	top:0;
 	left:0;
-	background:url(http://www.wowthemes.net/demo/quasar/assets/img/slide_2.jpg) fixed no-repeat;
+	background:url(http://i.imgur.com/QhtEXat.png) fixed no-repeat;
 	width:100%;
 	height:100%;
 	opacity:0.1;
@@ -676,7 +676,7 @@ input,button,select,textarea {
 	position:absolute;
 	top:0;
 	left:0;
-	background:url(http://www.wowthemes.net/demo/quasar/assets/img/slide_3.jpg) fixed no-repeat;
+	background:url(http://i.imgur.com/URrjP8i.png) fixed no-repeat;
 	width:100%;
 	height:100%;
 	opacity:0.1;
