--- a/css/style1.css
+++ b/css/style1.css
@@ -1592,3 +1592,94 @@ canvas {
 .count-particles{
   border-radius: 0 0 3px 3px;
 }
+.buttons {
+	display: block;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 240px;
+  margin-top: -130px;
+  margin-left: -250px;
+  text-align: center;
+}
+
+.set:not(:last-child) {
+  border-bottom: 1px dotted #aaa;
+}
+
+.btn {
+  display: block;
+  min-width: 110px;
+  margin: 15px 5px;
+  padding: 10px 15px 12px;
+  font: 700 12px/1 'Open Sans', sans-serif;
+  border-radius: 3px;
+  box-shadow: inset 0 -1px 0 1px rgba(0, 0, 0, 0.1), inset 0 -10px 20px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.btn.sec {
+  color: #777;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+  background: #fff;
+}
+
+.btn.sec:hover {
+  background: #f5f5f5;
+}
+
+.btn.pri {
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.set.blue .btn.pri {
+  background: #59d;
+}
+
+.set.blue .btn.pri:hover {
+  background: #48c;
+}
+.btn.sec.ico,
+.btn.pri.ico {
+  position: relative;
+  padding-left: 40px;
+  text-align: left;
+}
+
+.btn.sec.ico:before,
+.btn.pri.ico:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 30px;
+  padding: 10px 0 12px;
+  font-family: fontawesome;
+  text-align: center;
+  border-radius: 3px 0 0 3px;
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.btn.sec.ico:before {
+  background: rgba(0, 0, 0, 0.08);
+}
+
+.set.blue .btn.sec.ico:before {
+  content: "";
+}
+
+.set.blue .btn.pri.ico:before {
+  content: "";
+}
+.set.black .btn.pri {
+  background: #555;
+	text-align: center;
+}
+.set.black .btn.pri:hover {
+  background: #444;
+	text-align: center;
+}
+a {
+    color: black;
+}
