--- a/css/style1.css
+++ b/css/style1.css
@@ -133,7 +133,7 @@ section {
 	position:absolute;
 	top:0;
 	left:0;
-	background-image:url(http://www.citizentekk.com/wp-content/uploads/2016/11/NRZ6l1.jpg);
+	background-image:url(../img/datacenter.png);
 	width:100%;
 	height:100%;
 	opacity:0.05;
@@ -152,7 +152,7 @@ section {
 	position:absolute;
 	top:0;
 	left:0;
-	background-image:url(http://i.imgur.com/oMKfJiP.png);
+	background-image:url(https://i.imgur.com/oMKfJiP.png);
 	-webkit-background-size:cover !Important;
 	-moz-background-size:cover !Important;
 	-o-background-size:cover !Important;
@@ -170,7 +170,7 @@ section {
 	position:absolute;
 	top:0;
 	left:0;
-	background-image:url(http://unsplash.it/1600/1400?random=3);
+	background-image:url(../img/fw.png);
 	-webkit-background-size:cover !Important;
 	-moz-background-size:cover !Important;
 	-o-background-size:cover !Important;
@@ -189,7 +189,6 @@ section {
 	position:absolute;
 	top:0;
 	left:0;
-	background-image:url(http://unsplash.it/1600/1400?random=4);
 	-webkit-background-size:cover !Important;
 	-moz-background-size:cover !Important;
 	-o-background-size:cover !Important;
@@ -207,7 +206,6 @@ section {
 	position:absolute;
 	top:0;
 	left:0;
-	background-image:url(http://unsplash.it/1600/1400?random=5);
 	width:100%;
 	height:100%;
 	opacity:0.08;
@@ -225,7 +223,6 @@ section {
 	position:absolute;
 	top:0;
 	left:0;
-	background-image:url(http://unsplash.it/1600/1400?random=6);
 	width:100%;
 	height:100%;
 	opacity:0.04;
