--- a/css/style1.css
+++ b/css/style1.css
@@ -644,7 +644,7 @@ input,button,select,textarea {
 	position:absolute;
 	top:0;
 	left:0;
-	background:url(http://i.imgur.com/URrjP8i.png) fixed no-repeat;
+	background:url(https://i.imgur.com/URrjP8i.png) fixed no-repeat;
 	width:100%;
 	height:100%;
 	opacity:0.1;
@@ -670,7 +670,7 @@ input,button,select,textarea {
 	position:absolute;
 	top:0;
 	left:0;
-	background:url(http://i.imgur.com/QhtEXat.png) fixed no-repeat;
+	background:url(https://i.imgur.com/QhtEXat.png) fixed no-repeat;
 	width:100%;
 	height:100%;
 	opacity:0.1;
