--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
 #second {
     width: 50%;
     float: left;
+    padding-left:50px;
+    text-align: left;
+    padding-right: 50px
 
 }
 #container {
@@ -61,16 +64,6 @@ body {
   text-align: left;
 }
 
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #b61924;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
 
 body {
   margin: 0;
@@ -136,6 +129,8 @@ p {
 section {
   padding-top: 10px;
   padding-bottom: 30px;
+  height:auto;
+  overflow:hidden
 }
 
 .color-white {
@@ -249,7 +244,7 @@ span {
 
 .container {
   background: rgba(255, 255, 255, 0;
-  height: 500px;
+  height: auto;
   margin: 0 auto;
   position: relative;
   top: 220px;
