--- a/css/style1.css
+++ b/css/style1.css
@@ -1541,54 +1541,7 @@ canvas {
   vertical-align: bottom;
 }
 
-/* ---- particles.js container ---- */
-
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #b61924;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-/* ---- stats.js ---- */
-
-.count-particles{
-  background: #000022;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13E8E9;
-  font-size: .8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-.js-count-particles{
-  font-size: 1.1em;
-}
-
-#stats,
-.count-particles{
-  -webkit-user-select: none;
-}
-
-#stats{
-  border-radius: 3px 3px 0 0;
-
-}
-
-.count-particles{
-  border-radius: 0 0 3px 3px;
-}
+/*Clean Button set*/
 .buttons {
 	display: block;
   top: 50%;
@@ -1651,7 +1604,7 @@ canvas {
   left: 0;
   display: block;
   width: 30px;
-  padding: 5px 0 12px;
+  padding: 10px 0 12px;
   font-family: fontawesome;
   text-align: center;
   border-radius: 3px 0 0 3px;
